# DronMovementManager

./: .gitignore  LICENSE  README.md  Run.exe.lnk  SimulatorProgress.txt
SatteliteSimulator/: CMakeLists.txt  CMakeLists_clang.txt  SatelliteRotator.sln
SatteliteSimulator/Controller/: Controller.cpp  Controller.h  Controller.vcxproj  Controller.vcxproj.filters  Generator.cpp  Generator.h  NetworkArchitecture.h  NeuralConfig.h  NeuralNetwork.cpp  NeuralNetwork.h  Sample.cpp  Sample.h
SatteliteSimulator/Controller.Contracts/: Controlable.cpp  Controlable.h  Controller.Contracts.vcxproj  Controller.Contracts.vcxproj.filters  IControlable.h  IController.cpp  IController.h  NeuralNetwork.cpp  TestController.h
SatteliteSimulator/Controller.Contracts/x64/Debug/: vc141.idb
SatteliteSimulator/Controller/Debug/: Controller.idb
SatteliteSimulator/Controller/Debug/Controller.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  (+1 more)
SatteliteSimulator/Debug/: SatelliteSimulator.lib  Simulation.Core.lib  parameters.txt  sat1_nnbiases.txt
SatteliteSimulator/Entry/: AddDefaultSatCommand.h  CmdList.h  CmdResolver.h  CmdUtils.h  Command.h  Constants.h  ControlCommand.h  DefaultSatellite.h  Entry.vcxproj  Entry.vcxproj.filters  GlbState.cpp  GlbState.h  HelpCommand.h  ListCommand.h  LoadCommand.h  PowerToWheelCommand.h  SetTimeStepCommand.h  SimulateCommand.h  aparameters.txt  main.cpp  n_nnbiases.txt  nn_nnbiases.txt  parameters.txt  sat1_nnbiases.txt  sat_nnbiases.txt
SatteliteSimulator/Entry/Debug/: vc141.idb
SatteliteSimulator/SatteliteSimulator/: DefaultSatellite.h  ReactionWheel.cpp  ReactionWheel.h  Satellite.cpp  Satellite.h  Sattelite.cpp  Sattelite.h  SatteliteSimulator.vcxproj  SatteliteSimulator.vcxproj.filters  TestController.cpp  TestController.h  TestSatellite.h  TestSattelite.h  main.cpp
SatteliteSimulator/SatteliteSimulator/Debug/: SatelliteSimulator.idb
SatteliteSimulator/Simulation/: Exceptions.h  ForcePoint.cpp  ForcePoint.h  MassPoint.cpp  MassPoint.h  Object.cpp  Object.h  Point.cpp  Point.h  Simulation.cpp  Simulation.h  Simulation.vcxproj  Simulation.vcxproj.filters  Utils.h  main.cpp
SatteliteSimulator/Simulation.Contracts/: IMovable.cpp  IMovable.h  IObject.h  IPoint.h  IRotatable.h  IRotator.cpp  ISimulation.h  Simulation.Contracts.vcxproj  Simulation.Contracts.vcxproj.filters
SatteliteSimulator/Simulation.Tests/: Mockups.h  ObjectTests.cpp  Simulation.Tests.vcxproj  pch.cpp
SatteliteSimulator/Simulation.Tests/Debug/: vc141.idb
SatteliteSimulator/Simulation/Debug/: Simulation.Core.idb
SatteliteSimulator/SimulationTests/: SimulationTests.vcxproj.filters  stdafx.cpp  unittest1.cpp
SatteliteSimulator/x64/Debug/: Controller.Contracts.exp  Controller.exp  SatelliteSimulator.ilk
(+82 files in other folders)
